--- a/fail.qmd
+++ b/fail.qmd
@@ -4,15 +4,15 @@ format: html
 editor: visual
 ---
 
-```{r}
+```{r make function}
 f <- function() g()
 g <- function() h()
 h <- function() i()
 i <- function() stop("WRONG")
 ```
 
-```{r}
-### do the thing
+```{r call function}
+
 f()
 
 ```
